<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>HORDE</groupId>
	<artifactId>HORDE</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>HORDE</name>
	<description>2D topdown round-based java zombie shooter survival game
	</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.basedir>C:\Users\ramir\Desktop\NewNetwork\NewNetwork</project.basedir>
		<javafx.version>17</javafx.version>
	</properties>


	<repositories>
		<repository>
			<id>clojars</id>
			<url>https://clojars.org/repo/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>kryonet</groupId>
			<artifactId>kryonet</artifactId>
			<version>2.21</version>
		</dependency>
		<dependency>
			<groupId>com.esotericsoftware</groupId>
			<artifactId>kryo</artifactId>
			<version>5.6.0</version>
		</dependency>
		<!-- Add other dependencies here -->
		<!-- <dependency> <groupId>org.openjfx</groupId> <artifactId>javafx-controls</artifactId> 
			<version>${javafx.version}</version> </dependency> <dependency> <groupId>org.openjfx</groupId> 
			<artifactId>javafx-graphics</artifactId> <version>${javafx.version}</version> 
			</dependency> <dependency> <groupId>org.openjfx</groupId> <artifactId>javafx-swing</artifactId> 
			<version>${javafx.version}</version> </dependency> <dependency> <groupId>org.openjfx</groupId> 
			<artifactId>javafx-fxml</artifactId> <version>${javafx.version}</version> 
			</dependency> -->
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>22.0.1</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>22.0.1</version>
    </dependency>
        <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>22.0.1</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>22.0.1</version>
    </dependency>
        <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-media</artifactId>
        <version>22.0.1</version>
    </dependency>
    <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-swing</artifactId>
        <version>22.0.1</version>
    </dependency>
        <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-web</artifactId>
        <version>22.0.1</version>
    </dependency>
<!-- 		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-base</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.base.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.controls.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.fxml.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-graphics</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.graphics.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-media</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.media.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.swing.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx.web.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javafx</groupId>
			<artifactId>javafx-swt</artifactId>
			<version>22.0.1</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/libs/javafx-swt.jar</systemPath>
		</dependency> -->

	</dependencies>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<resources>
			<resource>
				<directory>src</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>res</directory>
				<includes>
					<include>**/*.txt</include> <!-- Adjust for your specific file extensions -->
				</includes>
			</resource>
			<resource>
				<directory>${project.basedir}/res</directory>
				<includes>
					<include>**/*.txt</include>
					<include>**/*.wav</include>
					<include>**/*.png</include>
					<!-- Add more include patterns for other file types as needed -->
				</includes>
			</resource>
		</resources>

		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>16</release>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					  <compilerArgs>
                    <arg>--module-path</arg>
                    <arg>C:\Users\ramir\Desktop\javafx-sdk-22.0.1\lib</arg>
                    <arg>--add-modules</arg>
                    <arg>javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web</arg>
                </compilerArgs>
				</configuration>
			</plugin>

<!-- 			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>project.game.horde.main.Launcher</mainClass>
				</configuration>
			</plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<!-- <mainClass>project.game.horde.main.Launcher</mainClass> -->
									<manifestEntries>
										<Main-Class>project.game.horde.main.Launcher</Main-Class>
										<Build-Jdk>${java.version}</Build-Jdk>
										<Implementation-Vendor>daybreak</Implementation-Vendor>
										<Implementation-Title>HORDE</Implementation-Title>
										<!-- Specify the icon path relative to the root of the JAR -->
										<SplashScreen-Image>res/textures/zombie.png</SplashScreen-Image>
									</manifestEntries>
								</transformer>
							</transformers>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>